<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catedra</string>
    <string name="action_settings">Settings</string>
    <string name="IniciarSesion">Iniciar sesion</string>
    <string name="Registrar">Registrar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Usuario">NICK</string>
    <string name="Password">Password</string>
    <string name="nombreusuario">Nombre de usuario</string>
    <string name="Nombre">Name</string>
    <string name="Email">Email example@exa.cl</string>
    <string name="fechanacimiento">birthday 01/01/90</string>
    <string name="tituloregistrar">Comprobar nombre usuario</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_sign_in2">SignIn2</string>
    <string name="title_activity_sign_in3">SignIn3</string>
    <string name="number">Phone</string>
    <string name="completeregister">Completar Registro</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="tituloformulario">Perfil</string>
    <string name="editarperfil">Editar perfil</string>
    <string name="Confirmarperfil">Confirmar</string>
    <string name="usuari">Nick: </string>
    <string name="passwor">Password: </string>
    <string name="nombr">Nombre: </string>
    <string name="emai">Email: </string>
    <string name="fechana">Fecha Nac: </string>
    <string name="telefon">Telefono: </string>
    <string name="reset">Reset form</string>
    <string name="title_activity_editar_perfil">EditarPerfil</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_app">App</string>
    <string name="base">Avanzar</string>
    <string name="Csesion">Finalizar</string>
    <string name="tituloapp">App Catedra 2</string>
    <string name="perfil">Perfil</string>
    <string name="radio0">preferencia 1</string>
    <string name="radio1">preferencia 2</string>
    <string name="radio2">preferencia 3</string>
    <string name="title_activity_app_avanzar">AppAvanzar</string>
    <string name="retro">Atras</string>
    <string name="title_activity_perfil2">Perfil2</string>

</resources>
