<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Perfil2" >

    <TextView
        android:id="@+id/tituloform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tituloformulario"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/confirmarperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditarPerfil"
        android:layout_alignBottom="@+id/EditarPerfil"
        android:layout_alignParentRight="true"
        android:onClick="Conperfil"
        android:text="@string/Confirmarperfil"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/EditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="EditarPerfil"
        android:text="@string/editarperfil"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/edadform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailform"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/telefonoform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edadform"
        android:layout_below="@+id/edadform"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/emailform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edadform"
        android:layout_alignLeft="@+id/nameform"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/nameform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailform"
        android:layout_alignLeft="@+id/passform"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/passform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameform"
        android:layout_alignLeft="@+id/usuarioform"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/usuarioform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passform"
        android:layout_toRightOf="@+id/textView5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passform"
        android:layout_alignLeft="@+id/EditarPerfil"
        android:text="@string/usuari"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/passwor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailform"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/nombr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/emai"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/fechana"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/telefonoform"
        android:layout_alignBottom="@+id/telefonoform"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/telefon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
