<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etnombreusuario"
        android:layout_marginTop="76dp"
        android:inputType="text"
        android:hint="@string/nombreusuario"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etpassword"
        android:layout_alignLeft="@+id/etpassword"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:ems="10"
        android:id="@+id/etpassword"
        android:layout_below="@+id/etnombreusuario"
        android:layout_centerHorizontal="true"
        android:textStyle="italic" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:id="@+id/button"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/etpassword"
        android:layout_centerHorizontal="true"
        android:onClick="ClickRegistrar1"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/tituloregistrar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

</RelativeLayout>
