<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn2" >

    <Button
        android:id="@+id/buttonregister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edadpers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="ClickFinalRegistrar"
        android:text="@string/Registrar"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/emailpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edadpers"
        android:layout_alignLeft="@+id/edadpers"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/namepers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailpers"
        android:layout_alignLeft="@+id/emailpers"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edadpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/fechanacimiento"
        android:inputType="date"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/numerpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edadpers"
        android:layout_below="@+id/edadpers"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/number" />

    <TextView
        android:id="@+id/tvusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvpassword"
        android:layout_alignLeft="@+id/tvpassword"
        android:layout_alignRight="@+id/tvpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/namepers"
        android:layout_alignLeft="@+id/namepers"
        android:layout_alignRight="@+id/namepers"
        android:layout_marginBottom="51dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

</RelativeLayout>
